--- a/DAY_6_CHALLENGE/index.html
+++ b/DAY_6_CHALLENGE/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Where are you from?</h1>
-    <select class="js-country">
+    <select class="js-select">
       <option value="">--- Choose Your Country ---</option>
       <option value="Korea">Korea</option>
       <option value="Greece">Greece</option>
